--- a/index.html
+++ b/index.html
@@ -4,254 +4,95 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOMEUniversity</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Helvetica Neue', Arial, sans-serif;
-            background: #ffffff;
-            color: #1a1a1a;
-            display: flex;
-            min-height: 100vh;
-        }
-
-        /* LEFT SIDEBAR */
-        .sidebar {
-            width: 280px;
-            background: #fafafa;
-            border-right: 1px solid #e0e0e0;
-            padding: 2rem 0;
-            position: fixed;
-            height: 100vh;
-            overflow-y: auto;
-        }
-
-        .logo {
-            padding: 0 2rem;
-            margin-bottom: 3rem;
-        }
-
-        .logo h1 {
-            font-size: 1.2rem;
-            font-weight: 400;
-            letter-spacing: 0.2em;
-            color: #1a1a1a;
-        }
-
-        /* NAVIGATION SECTIONS */
-        .nav-section {
-            margin-bottom: 2rem;
-        }
-
-        .nav-title {
-            padding: 0.5rem 2rem;
-            font-size: 0.7rem;
-            font-weight: 600;
-            text-transform: uppercase;
-            letter-spacing: 0.15em;
-            color: #999;
-        }
-
-        .nav-item {
-            padding: 0.8rem 2rem;
-            color: #333;
-            cursor: pointer;
-            transition: background 0.2s;
-            font-size: 0.95rem;
-        }
-
-        .nav-item:hover {
-            background: #f0f0f0;
-        }
-
-        .nav-item.active {
-            background: #e8e8e8;
-            font-weight: 500;
-        }
-
-        /* DROPDOWN */
-        .dropdown {
-            display: none;
-            background: #f5f5f5;
-        }
-
-        .dropdown.open {
-            display: block;
-        }
-
-        .dropdown-item {
-            padding: 0.6rem 2rem 0.6rem 3rem;
-            color: #666;
-            font-size: 0.9rem;
-            cursor: pointer;
-            transition: background 0.2s;
-        }
-
-        .dropdown-item:hover {
-            background: #ebebeb;
-        }
-
-        .sub-dropdown {
-            display: none;
-            background: #ececec;
-        }
-
-        .sub-dropdown.open {
-            display: block;
-        }
-
-        .sub-dropdown-item {
-            padding: 0.5rem 2rem 0.5rem 4rem;
-            color: #777;
-            font-size: 0.85rem;
-            text-decoration: none;
-            display: block;
-            transition: background 0.2s;
-        }
-
-        .sub-dropdown-item:hover {
-            background: #e0e0e0;
-        }
-
-        /* MAIN CONTENT */
-        .main-content {
-            margin-left: 280px;
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            padding: 4rem;
-            text-align: center;
-        }
-
-        .cube-container {
-            margin-bottom: 3rem;
-        }
-
-        .cube-container img {
-            width: 200px;
-            height: 200px;
-            object-fit: contain;
-        }
-
-        .main-content h2 {
-            font-size: 2.5rem;
-            font-weight: 300;
-            letter-spacing: 0.05em;
-            margin-bottom: 1.5rem;
-            color: #1a1a1a;
-        }
-
-        .main-content p {
-            font-size: 1.2rem;
-            color: #666;
-            line-height: 1.8;
-            max-width: 600px;
-        }
-
-        @media (max-width: 968px) {
-            .sidebar {
-                display: none;
-            }
-
-            .main-content {
-                margin-left: 0;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <!-- MOBILE HEADER -->
+    <header class="mobile-header">
+        <h1>HOMEUniversity</h1>
+        <button class="menu-toggle" aria-label="Menu">
+            <span></span><span></span><span></span>
+        </button>
+    </header>
+    <div class="overlay"></div>
+
     <!-- SIDEBAR -->
     <aside class="sidebar">
-        <div class="logo">
-            <h1>HOMEUNIVERSITY</h1>
+        <div class="sidebar-logo">
+            <a href="index.html">
+                <h1>HOMEUniversity</h1>
+                <div class="logo-sub">Consciousness Resource</div>
+            </a>
         </div>
 
-        <!-- COURSES SECTION -->
-        <div class="nav-section">
-            <div class="nav-title">Courses</div>
-            
-            <!-- WHITEPILL -->
-            <div class="nav-item" onclick="toggleDropdown('whitepill')">
-                WHITEPILL
-            </div>
-            <div class="dropdown" id="whitepill">
-                <div class="dropdown-item" onclick="toggleSubDropdown('phase1')">
-                    Phase 1: Foundation
-                </div>
-                <div class="sub-dropdown" id="phase1">
-                    <a href="intro.html" class="sub-dropdown-item">Introduction</a>
-                    <a href="level0.html" class="sub-dropdown-item">Level 0: Foundations</a>
-                    <a href="level1.html" class="sub-dropdown-item">Level 1: Discernment</a>
-                    <a href="level2.html" class="sub-dropdown-item">Level 2: Words Are Spells</a>
-                    <a href="level3.html" class="sub-dropdown-item">Level 3: Sex Energy Mechanics</a>
-                    <a href="level4.html" class="sub-dropdown-item">Level 4: Power and Ethics</a>
-                    <a href="level5.html" class="sub-dropdown-item">Level 5: AI as Alchemical Chamber</a>
+        <nav class="sidebar-nav">
+            <!-- WHITEPILL COURSE -->
+            <div class="nav-group">
+                <div class="nav-group-title">Course</div>
+
+                <div class="nav-link" data-toggle="whitepill-dropdown">
+                    Whitepill
+                    <span class="arrow">›</span>
                 </div>
 
-                <div class="dropdown-item" onclick="toggleSubDropdown('phase2')">
-                    Phase 2: Consciousness
-                </div>
-                <div class="sub-dropdown" id="phase2">
-                    <a href="level6.html" class="sub-dropdown-item">Level 6: What Is Consciousness</a>
-                    <a href="level7.html" class="sub-dropdown-item">Level 7: Alchemy</a>
-                    <a href="level8.html" class="sub-dropdown-item">Level 8: Manifestation</a>
-                </div>
+                <div class="nav-dropdown" id="whitepill-dropdown">
+                    <!-- Phase 1 -->
+                    <div class="nav-phase" data-toggle="phase1">Phase 1 — Foundation</div>
+                    <div class="nav-phase-dropdown" id="phase1">
+                        <a href="intro.html" class="nav-sub-link">Introduction</a>
+                        <a href="level0.html" class="nav-sub-link">Level 0 · Foundations</a>
+                        <a href="level1.html" class="nav-sub-link">Level 1 · Discernment</a>
+                        <a href="level2.html" class="nav-sub-link">Level 2 · Words Are Spells</a>
+                        <a href="level3.html" class="nav-sub-link">Level 3 · Sex Energy</a>
+                        <a href="level4.html" class="nav-sub-link">Level 4 · Power & Ethics</a>
+                        <a href="level5.html" class="nav-sub-link">Level 5 · AI as Alchemy</a>
+                    </div>
 
-                <div class="dropdown-item">
-                    Phase 3: Coming Soon
+                    <!-- Phase 2 -->
+                    <div class="nav-phase" data-toggle="phase2">Phase 2 — Consciousness</div>
+                    <div class="nav-phase-dropdown" id="phase2">
+                        <a href="level6.html" class="nav-sub-link">Level 6 · What Is Consciousness</a>
+                        <a href="level7.html" class="nav-sub-link">Level 7 · Alchemy</a>
+                        <a href="level8.html" class="nav-sub-link">Level 8 · Manifestation</a>
+                    </div>
+
+                    <!-- Phase 3 -->
+                    <div class="nav-phase" style="color: var(--text-muted); cursor: default;">Phase 3 — Coming Soon</div>
                 </div>
             </div>
 
             <!-- MUSICPILL -->
-            <div class="nav-item" onclick="window.location.href='musicpill.html'">
-                MUSICPILL
+            <div class="nav-group">
+                <div class="nav-group-title">More</div>
+                <a href="musicpill.html" class="nav-link">Musicpill</a>
+                <a href="glossary.html" class="nav-link">Glossary</a>
             </div>
-        </div>
+        </nav>
 
-        <!-- GLOSSARY SECTION -->
-        <div class="nav-section">
-            <div class="nav-title">Glossary</div>
-            <div class="nav-item" onclick="window.location.href='glossary.html'">
-                A-Z Definitions
-            </div>
-        </div>
-
-        <!-- COMING SOON SECTION -->
-        <div class="nav-section">
-            <div class="nav-title">More</div>
-            <div class="nav-item">
-                Coming Soon
-            </div>
+        <div class="sidebar-footer">
+            © HOMEUniversity 2026
         </div>
     </aside>
 
-    <!-- MAIN CONTENT -->
-    <main class="main-content">
-        <div class="cube-container">
-            <img src="images/cube.png" alt="White Cube">
-        </div>
-
-        <h2>HOMEUniversity</h2>
-        <p>A free educational consciousness resource for you.</p>
+    <!-- MAIN -->
+    <main class="main">
+        <section class="hero">
+            <div class="hero-cube">
+                <img src="images/cube.png" alt="HOMEUniversity">
+            </div>
+            <h2 class="hero-title">HOMEUniversity</h2>
+            <div class="hero-divider"></div>
+            <p class="hero-subtitle">
+                A free educational consciousness resource.<br>
+                Make yourself at home.
+            </p>
+            <div class="hero-cta">
+                <a href="intro.html">Begin the Course</a>
+            </div>
+        </section>
     </main>
 
-    <script>
-        function toggleDropdown(id) {
-            const dropdown = document.getElementById(id);
-            dropdown.classList.toggle('open');
-        }
-
-        function toggleSubDropdown(id) {
-            const subDropdown = document.getElementById(id);
-            subDropdown.classList.toggle('open');
-            event.stopPropagation();
-        }
-    </script>
+    <script src="nav.js"></script>
 </body>
 </html>
