--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="nl" style="opacity:.4;cursor:default;font-size:.82rem">Phase 2 — Coming Soon</div>
         </div>
         <div class="ng"><div class="ng-t">Protocols</div>
-            <a class="nl" href="pfs.html">PFS Recovery</a>
+            <a class="nl" href="pfs.html">Coming Soon</a>
             <a class="nl" style="opacity:.4;cursor:default">ICP · Coming Soon</a>
         </div>
         <div class="ng"><div class="ng-t">More</div>
